--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                             <th>Sector</th>
                             <th>Recommendation</th>
                             <th>Confidence</th>
+                            <th>Current Price</th>
                             <th>Target High</th>
                             <th>Target Low</th>
                             <th>Actions</th>
