--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlphaPulse - AI Stock Recommendations</title>
+    <!-- Add meta theme color for browser UI -->
+    <meta name="theme-color" content="#1D2731">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -11,14 +13,14 @@
 </head>
 <body>
     <!-- Navigation Header -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #1D2731; border-bottom: 2px solid #D9B310;">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">
+            <a class="navbar-brand fw-bold" href="#" style="color: #D9B310;">
                 <i class="fas fa-chart-line me-2"></i>
                 AlphaPulse
             </a>
             <div class="navbar-nav ms-auto">
-                <span class="navbar-text">
+                <span class="navbar-text" style="color: #328CC1;">
                     <i class="fas fa-robot me-2"></i>
                     AI-Powered Stock Analysis
                 </span>
@@ -54,7 +56,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <div class="pulse-animation">
-                        <i class="fas fa-brain fa-5x text-primary"></i>
+                        <i class="fas fa-brain fa-5x" style="color: #D9B310;"></i>
                     </div>
                 </div>
             </div>
@@ -126,10 +128,10 @@
 
         <!-- Loading Spinner -->
         <div id="loadingSpinner" class="text-center py-5">
-            <div class="spinner-border text-primary" role="status">
+            <div class="spinner-border" role="status" style="color: #D9B310;">
                 <span class="visually-hidden">Loading...</span>
             </div>
-            <p class="mt-3 text-muted">Loading stock recommendations...</p>
+            <p class="mt-3" style="color: #328CC1;">Loading stock recommendations...</p>
         </div>
 
         <!-- Error Message -->
@@ -140,19 +142,19 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="py-4 mt-5" style="background: linear-gradient(135deg, #1D2731 0%, #0B3C5D 100%); border-top: 2px solid #D9B310;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5><i class="fas fa-chart-line me-2"></i>AlphaPulse</h5>
-                    <p class="text-white-50">AI-powered Australian stock analysis platform</p>
+                    <h5 style="color: #D9B310;"><i class="fas fa-chart-line me-2"></i>AlphaPulse</h5>
+                    <p style="color: #328CC1;">AI-powered Australian stock analysis platform</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="text-white-50 mb-1">
+                    <p style="color: #328CC1;" class="mb-1">
                         <i class="fas fa-clock me-2"></i>
                         Last updated: <span id="lastUpdated">--</span>
                     </p>
-                    <p class="text-white-50 mb-0">
+                    <p style="color: #328CC1;" class="mb-0">
                         <i class="fas fa-shield-alt me-2"></i>
                         Powered by advanced AI analysis
                     </p>
