--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                             <th>Recommendation</th>
                             <th>Confidence</th>
                             <th>Current Price</th>
-                            <th>Target High</th>
-                            <th>Target Low</th>
+                            <th>Avg Target Price</th>
+                            <th>Price Potential</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
