--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     <select id="recommendationFilter" class="form-select">
                         <option value="">All Recommendations</option>
                         <option value="Strong Buy">Strong Buy</option>
-                        <option value="Moderate Buy">Moderate Buy</option>
+                        <option value="Buy">Buy</option>
                         <option value="Hold">Hold</option>
-                        <option value="Moderate Sell">Moderate Sell</option>
+                        <option value="Sell">Sell</option>
                         <option value="Strong Sell">Strong Sell</option>
                     </select>
                 </div>
