--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </div>
                         <div class="stat-card">
                             <div class="stat-number" id="strong-buys">0</div>
-                            <div class="stat-label">Strong Buys</div>
+                            <div class="stat-label">Buy Recommendations</div>
                         </div>
                         <div class="stat-card">
                             <div class="stat-number" id="avg-confidence">0%</div>
@@ -82,11 +82,9 @@
                     </label>
                     <select id="recommendationFilter" class="form-select">
                         <option value="">All Recommendations</option>
-                        <option value="Strong Buy">Strong Buy</option>
                         <option value="Buy">Buy</option>
                         <option value="Hold">Hold</option>
                         <option value="Sell">Sell</option>
-                        <option value="Strong Sell">Strong Sell</option>
                     </select>
                 </div>
                 <div class="col-md-3">
